--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,5 @@ dev-dependencies = [
     "ipykernel>=6.29.5",
     "ruff>=0.6.3",
     "mypy>=1.11.2",
-    "tensorboard>=2.17.1",
-    "torch-tb-profiler>=0.4.3",
+    "wandb>=0.17.8",
 ]
