--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "pandas>=2.2.2",
     "lightning>=2.4.0",
+    "scikit-learn>=1.5.1",
 ]
 
 [tool.uv]
